fix url word-wrap (#258)

--- a/web/style/FormList.less
+++ b/web/style/FormList.less
@@ -62,7 +62,8 @@
       }
       .value {
         font-weight: 600;
-        word-wrap: normal;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
         white-space: pre-wrap;
       }
     }
